--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "recoil": "^0.7.7",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
